--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ date.setUTCHours(0, 0, 0, 0);
 return date; 
 } 
 function showsectime() {
-var birthDay =NewDate("2021-7-12");
+var birthDay =NewDate("2022-1-13");
 var today=new Date();
 var timeold=today.getTime()-birthDay.getTime();
 var sectimeold=timeold/1000
@@ -177,7 +177,7 @@ style="border: 1px solid #63B8FF; min-height: 50px; font-size: 16px; line-height
 </div>
 <br>
                         <p class="copyright"><tbody>
-                        <p class="copyright">备案号：<a href="http://beian.miit.gov.cn">桂ICP备21015360号-1</a></p>
+                        <p class="copyright"><a href="https://icp.gov.moe/?keyword=20230122" target="_blank">萌ICP备20230122号</a>
 						<p class="copyright">© Copyright 故人导航系统</p>
 <br>
 
