--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ style="border: 1px solid #63B8FF; min-height: 50px; font-size: 16px; line-height
 </div>
 <br>
                         <p class="copyright"><tbody>
-                        <p class="copyright"><a href="https://icp.gov.moe/?keyword=20230122" target="_blank">萌ICP备20230122号</a>
+                        <p class="copyright">
 						<p class="copyright">© Copyright 故人导航系统</p>
 <br>
 
