--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
 
-<meta itemprop="name" content="导航系统"/>
+<meta itemprop="name" content="个人导航系统"/>
 <meta name="description" itemprop="description" content="故人导航系统，包含故人旗下的所有源码，您值得信赖！" />
 <!--浏览器小图标，如有，请上传-->
 <link rel="shortcut icon" href="favicon.ico">
