--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@ style="border: 1px solid #63B8FF;font-size: 16px; border-radius: 2em;padding: 5p
 <li><a target="_blank" href="./love2/index.html">表白代码2</a></li>
 <li><a target="_blank" href="./love3/index.html">表白代码3</a></li>
 <li><a target="_blank" href="./love4/index.html">表白代码4</a></li>
+<li><a target="_blank" href="">欢迎</a></li>	
 <!--
 <li><a target="_blank" href=""></a></li>
 <li><a target="_blank" href=""></a></li>
