--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
   <!--网页名称-->
-<title>导航系统</title>
+<title>个人导航系统</title>
 <meta name="baidu-site-verification" content="b9lOcChmbf">
 
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
@@ -46,7 +46,7 @@ style="border: 1px solid #63B8FF;font-size: 16px; border-radius: 2em;padding: 5p
 	<div class="content">
 		<div class="inner">
           <!--标题-->
-			<h2><a href="#">导航系统</a></h2>
+			<h2><a href="#">个人导航系统</a></h2>
 <p>
 				<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=1224403167&site=qq&menu=yes">QQ:1224403167</a><br>
 
