--- a/index.html
+++ b/index.html
@@ -99,9 +99,20 @@ style="border: 1px solid #63B8FF;font-size: 16px; border-radius: 2em;padding: 5p
 -->
 </ul>
 		<ul>
-<li><a target="_blank" href="">欢迎</a></li>
-   
-	</ul>
+<li><a target="_blank" href="">欢</a></li>
+<li><a target="_blank" href="">迎</a></li>
+<li><a target="_blank" href="">进</a></li>   
+<li><a target="_blank" href="">入</a></li>
+<li><a target="_blank" href="">二</a></li>
+<li><a target="_blank" href="">〇</a></li>
+<li><a target="_blank" href="">二</a></li>		
+<li><a target="_blank" href="">三</a></li>		
+<li><a target="_blank" href="">新</a></li>		
+<li><a target="_blank" href="">年</a></li>		
+<li><a target="_blank" href="">快</a></li>		
+<li><a target="_blank" href="">乐</a></li>		
+<li><a target="_blank" href="">！</a></li>
+</ul>
 	
 	</nav>
 	</header>
