--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@ style="border: 1px solid #63B8FF;font-size: 16px; border-radius: 2em;padding: 5p
 <li><a target="_blank" href="./win12/desktop.html">win12</a></li>
 <li><a target="_blank" href="./vip/index.html">免费影视</a></li>
 <li><a target="_blank" href="./wallpaper/index.html">免费壁纸</a></li>
-<li><a target="_blank" href="https://watermark.iculture.cc">视频去水印</a></li>
+<li><a target="_blank" href="https://watermark.iculture.cc">去水印</a></li>
 <li><a target="_blank" href="http://music.tencent.cf/">音乐解锁</a></li>
 <li><a target="_blank" href="./lianai/index.html">恋爱主页</a></li>
-<li><a target="_blank" href="./kdy/index.html">可达鸭举牌</a></li>
+<li><a target="_blank" href="./kdy/index.html">可达鸭</a></li>
 <li><a target="_blank" href="./Particle/index.html">粒子特效</a></li>
 <li><a target="_blank" href="./love1/index.html">表白代码1</a></li>
 <li><a target="_blank" href="./love2/index.html">表白代码2</a></li>
@@ -129,7 +129,7 @@ style="border: 1px solid #63B8FF;font-size: 16px; border-radius: 2em;padding: 5p
 	<body>
 <span id="sitetime"></span>
  <div align="center"
-style="border: 1px solid #63B8FF; min-height: 50px; font-size: 14px; line-height: 1.5; margin: 5px; border-radius: 2em;padding: 5px;"	    
+style="border: 1px solid #63B8FF; min-height: 50px; font-size: 16px; line-height: 1.5; margin: 5px; border-radius: 2em;padding: 5px;"	    
 				<!-- Footer -->
 					<footer id="footer">
 					    </a><div class="mom1" ><h5><p><span style="color:#FFFFFF;"><script src=""></script><script type="text/javascript">
