--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ style="border: 1px solid #63B8FF;font-size: 16px; border-radius: 2em;padding: 5p
 <li><a target="_blank" href="./wallpaper/index.html">免费壁纸</a></li>
 <li><a target="_blank" href="https://watermark.iculture.cc">去水印</a></li>
 <li><a target="_blank" href="http://music.tencent.cf/">音乐解锁</a></li>
-<li><a target="_blank" href="./lianai/index.html">恋爱主页</a></li>
+<li><a target="_blank" href="./game/index.html">小游戏</a></li>
 <li><a target="_blank" href="./kdy/index.html">可达鸭</a></li>
 <li><a target="_blank" href="./Particle/index.html">粒子特效</a></li>
 <li><a target="_blank" href="./love1/index.html">表白代码1</a></li>
@@ -191,7 +191,7 @@ style="border: 1px solid #63B8FF; min-height: 50px; font-size: 16px; line-height
 <br>
                         <p class="copyright"><tbody>
                         <p class="copyright">
-						<p class="copyright">© Copyright 故人导航系统</p>
+						<p class="copyright">© Copyright 个人导航系统</p>
 <br>
 
 
