--- a/vip/index.html
+++ b/vip/index.html
@@ -51,7 +51,7 @@
               <li class="nav-item">
                 <a
                   class=""
-                  href="https://blog.vvvv.gay/"
+                  <!--href="https://blog.vvvv.gay/"
                   target="_blank"
                   data-toggle="tooltip"
                   title="故人的博客"
@@ -357,7 +357,7 @@ https://jx.dj6u.com/?url=
 
               <li class="nav-item">
                 <a
-                  href="https://521.mcbbs.gq/"
+                 <!-- href="https://521.mcbbs.gq/"
                   class="nav-link"
                   target="_blank"
                   >一些特效</a
@@ -368,7 +368,7 @@ https://jx.dj6u.com/?url=
                   href="1.html "
                   class="nav-link"
                   target="_blank"
-                  >赞赏捐助</a
+                 <!-- >赞赏捐助</a
                 >
               </li>
             </ul>
@@ -420,13 +420,13 @@ $("#play").click(function(){
     $.cookie("apiList","");
     window.location.reload();
   }
-	console.group("欢迎使用VIP视频解析系统");
+	<!--console.group("欢迎使用VIP视频解析系统");
 		console.log("github地址：https://github.com/gurbk");
 		console.log("网站: https://blog.vvvv.gay/");
 		console.log("欢迎前来围观、吐槽、点赞、学习......");
-	console.groupEnd();
+	<!--console.groupEnd();
 
-	console.group("作者信息");
+	<!--console.group("作者信息");
 		console.log("网名：故人");
 		console.log("网站：https://blog.vvvv.gay/");
 	console.groupEnd();  
