--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
 
 <meta itemprop="name" content="个人导航系统"/>
-<meta name="description" itemprop="description" content="故人导航系统，包含故人旗下的所有源码，您值得信赖！" />
+<meta name="description" itemprop="description" content="粒梓导航系统，包含粒梓旗下的所有源码，您值得信赖！" />
 <!--浏览器小图标，如有，请上传-->
 <link rel="shortcut icon" href="favicon.ico">
 <link rel="stylesheet" href="css/main.css">
@@ -63,7 +63,7 @@ style="border: 1px solid #63B8FF;font-size: 16px; border-radius: 2em;padding: 5p
 	<nav>
 	<ul>
 
-<li><a target="_blank" href="./1/index.html">个人主页</a></li>
+<li><a target="_blank" href=".index.html">个人主页</a></li>
 <li><a target="_blank" href="./fireworks/index.html">跨年烟花</a></li>
 <li><a target="_blank" href="./fireworks1/index.html">跨年烟花1</a></li>
 <li><a target="_blank" href="./fireworks2/index.html">跨年烟花2</a></li>
