--- a/vip/index.html
+++ b/vip/index.html
@@ -51,13 +51,13 @@
               <li class="nav-item">
                 <a
                   class=""
-                  <!--href="https://blog.vvvv.gay/"
+                  <!--href=""
                   target="_blank"
                   data-toggle="tooltip"
-                  title="故人的博客"
+                  title=""
                 >
                   <i class=""></i>
-                  <span class="nav-link-inner--text d-lg-none">博客</span>
+                  <span class="nav-link-inner--text d-lg-none"></span>
                 </a>
               </li>
               <li class="nav-item">
@@ -357,10 +357,10 @@ https://jx.dj6u.com/?url=
 
               <li class="nav-item">
                 <a
-                 <!-- href="https://521.mcbbs.gq/"
+                 
                   class="nav-link"
                   target="_blank"
-                  >一些特效</a
+                  ></a
                 >
               </li>
               <li class="nav-item">
@@ -368,7 +368,7 @@ https://jx.dj6u.com/?url=
                   href="1.html "
                   class="nav-link"
                   target="_blank"
-                 <!-- >赞赏捐助</a
+                 <!-- ></a
                 >
               </li>
             </ul>
